[package]
name = "pagerand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependenci]

[dependencies]

[dependencies.sdl2]
version = "0.36.0"

features = ["ttf", "image", "mixer", "gfx", "use-pkgconfig"]

[dependencies.sdl2_ttf]
version = "0.25.1"

features = ["use-pkgconfig"]

[dependencies.sdl2_image]
version = "0.25.0"

features = ["use-pkgconfig"]

[dependencies.sdl2_mixer]

version = "0.25.0"

features = ["use-pkgconfig"]

[dependencies.sdl2_gfx]
version = "0.24.0"

features = ["use-pkgconfig"]

